# Courses

./: README.md  conf-inter.md  forum-stage.md
Dent/: Dent.md
ing1/: majeurs.md
ing1/Chifr/: dm1.py  dm2.py
ing1/Erobi/: TODO.md  getAngles.py  main  main.cc
ing1/Idvoc/: .gitlab-ci.yml  README.md  docker-compose.yml
ing1/Idvoc/backend/: Dockerfile  app.py  requirements.txt
ing1/Idvoc/frontend/: .dockerignore  Dockerfile  app.py
ing1/Idvoc/nginx/: nginx.conf
ing1/Tyla/: TODO.md
ing1/Tyla/tp1/: TODO.md  tp1q1.adb  tp1q2.java  tp1q3.pas  tp1q4.cc  tp1q5.js  tp1q6.py  tp1q7.lua  tp1q8.js  tp1q9.fth
ing1/Tyla/tp2/: tp2q1.d  tp2q2.d  tp2q3.adb  tp2q4.adb  tp2q5.java  tp2q6.cc  tp2q7.java  tp2q8.java
ing1/Tyla/tp3/: tp3q1.java  tp3q2.adb  tp3q3.swift  tp3q4.cc  tp3q5.cc  tp3q6.go  tp3q7.go
ing1/mark/: course.md
ing2/CSTR/: .gitignore  flake.nix  maketars.sh
ing2/CSTR/tp1/tp1-obj1-imbert/: Makefile  main.c  myfun.ept
ing2/CSTR/tp1/tp1-obj2-imbert/: Makefile  main.c  sum2.ept
ing2/CSTR/tp1/tp1-obj3-imbert/: Makefile  counter.ept  main.c
ing2/CSTR/tp1/tp1_obj1_imbert/: Makefile  main.c
ing2/CSTR/tp1/tp1_obj2_imbert/: Makefile  main.c
ing2/CSTR/tp1/tp1_obj3_imbert/: Makefile  main.c
ing2/CSTR/tp2/tp2-obj1-imbert/: Makefile  main.c  rcounter.ept
ing2/CSTR/tp2/tp2-obj2-imbert/: externc.epi  main.c  main.ept
ing2/CSTR/tp2/tp2-obj3-imbert/: Makefile  externc.epi  main.ept
ing2/CSTR/tp3/tp3-obj1-imbert/: externc.epi  main.c  main.ept
ing2/CSTR/tp4/tp4-obj1-imbert/: Makefile  main.c  scheduler.ept  scheduler_data.ept
ing2/CSTR/tp4/tp4-obj2-imbert/: scheduler.ept
ing2/CSTR/tp4/tp4-obj3-imbert/: scheduler.ept  scheduler_data.ept
ing2/CSTR/tp5/: aarch64-none-elf-gnu.nix  shell.nix
ing2/CSTR/tpASTERIOS/: .gitignore
ing2/CSTR/tpASTERIOS/LED Blinker/: blinker.psy  display_led_status.c
ing2/CSTR/tpASTERIOS/Streams/: IO.psy  display.c  input_stub.c  process0.psy  process1.psy
ing2/CSTR/tpASTERIOS/Temporal Variables/: decode.c  decode.psy  display.c  displayer_driver.psy  filter.psy  input_driver.psy
ing2/CSTR/tpASTERIOS/dash-dot/: endl.psy  main.psy  tiret.psy
ing2/PBS/DM2/: q1.py  q3.py
ing2/PBS/stats/: .Rhistory  Census_data_fr.csv  TD_ACP_230404.R  TD_LDA_230403.R  TD_RegressionLineaire_2023.R  Vehicules_TD_2023.csv  td1.R  td2.R  td3.R  vins.csv  wine_italy.csv
ing2/TELE/: .gitignore
ing2/TELE/project/: README.md
ing2/TELE/seminar2_Cyclone_Monitoring/code/: CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  Makefile  README.md  flake.nix  res.csv
ing2/TELE/seminar2_Cyclone_Monitoring/code/src/: main.cc
ing2/TELE/seminar2_Cyclone_Monitoring/code/src/data/: Coordinate.hh  Export.cc  Export.hh
ing2/TELE/seminar2_Cyclone_Monitoring/code/src/gui/: Imageviewer.cc  Imageviewer.hh
ing2/TELE/seminar2_Cyclone_Monitoring/code/src/maths/: Convert.cc  Convert.hh
ing2/TELE/seminar2_Cyclone_Monitoring/code/src/metadata/: GeoTaggedImage.hh  GeoTaggedImageList.cc  GeoTaggedImageList.hh
ing2/TELE/seminar2_Cyclone_Monitoring/code/src/misc/: Singleton.hh  misc.cc  misc.hh
ing2/VHDL/: .gitignore  course.md
ing2/VHDL/TP2_UART_2023/: _Exo.txt  test.txt
ing3/DISTRO/: flake.nix  kas-poky-rpi.yml
ing3/DROIT/: flashcards.txt
ing3/ERO2/projet/: README.md  configurations.py  load-graph-drawer.py  main.py  queues-panda.py  reject-graph-drawer.py  slides.pptx
ing3/IPRO/project/: CMakeLists.txt  algo-frames.cpp  algo.cpp  exemple_servo_voiture.ino  raspi_code.cpp
ing3/IPRO/project/arduino/: arduino.ino
ing3/IPRO/seminar_geometric_transformations/: CMakeLists.txt  exo1.cpp  exo3.cpp  exo4.cpp
ing3/IPRO/seminar_image_manipulation/: CMakeLists.txt  exo10.cpp  exo11.cpp  exo12.cpp  exo13.cpp  exo14.cpp  exo15.cpp  exo17.cpp  exo18.cpp  exo19.cpp  exo20.cpp  exo21.cpp  exo22.cpp  exo23.cpp  exo24.cpp  exo5.cpp  exo6.cpp  exo7.cpp  exo8.cpp  exo9.cpp  load.cpp
ing3/IRGPU/: device_query.cu
ing3/IRGPU/project/files/: CMakeLists.txt  README.md  flake.nix
ing3/IRGPU/project/files/src/: Compute.cpp  Compute.cu  Compute.hpp  Image.hpp  gstfilter.c  gstfilter.h  stream.cpp
ing3/LASY/student_day2/: questions.md
ing3/LASY/student_day3/: questions.md
ing3/LASY/tp-ada-2/: doc.json
ing3/LASY/tp-rust-2/: Cargo.toml
ing3/ROS/project/: Dockerfile  README  script.sh  world-generator.py
ing3/ROS/project/src/ros_robot/: CMakeLists.txt  package.xml
ing3/ROS/project/src/ros_robot/code/: algo_frame.cpp  algo_frame.hpp  control_by_camera.cpp
ing3/ROS/project/src/ros_robot/description/: camera.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
ing3/ROS/project/src/ros_robot/launch/: launch_sim.launch.py
ing3/ROS/tp1/: turtlesim.yaml  turtlesim_bg_sea.yaml
ing3/ROS/tp2/my_ros2_ws/src/my_first_ros_codes/: CMakeLists.txt  package.xml
ing3/ROS/tp2/my_ros2_ws/src/my_first_ros_codes/launch/: pingpong_launch.py  pingpong_launch.xml  turtlesim_2turtles_event_launch.py  turtlesim_2turtles_group_launch.py  turtlesim_2turtles_group_launch.xml  turtlesim_2turtles_include1_launch.py  turtlesim_2turtles_include1_launch.xml  turtlesim_2turtles_include2_launch.py  turtlesim_2turtles_include2_launch.xml  turtlesim_2turtles_launch.py  turtlesim_2turtles_launch.xml  turtlesim_mimic_arg_launch.py  turtlesim_mimic_arg_launch.xml  turtlesim_mimic_launch.py  turtlesim_mimic_launch.xml  turtlesim_mimic_sand_launch.py  turtlesim_mimic_sand_launch.xml  turtlesim_original_launch.py  turtlesim_original_launch.xml  turtlesim_random_launch.py  turtlesim_random_launch.xml
ing3/ROS/tp2/my_ros2_ws/src/my_first_ros_codes/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  change_hello_world_parameter.cpp  hello_custom_node.cpp  hello_world.cpp  hello_world_parameter.cpp  publish_circle_node.cpp  publish_node.cpp  subscribe_circle_node.cpp  subscribe_node.cpp  timer_action_client.cpp  timer_action_server.cpp  turtle_random_node.cpp
ing3/VERIF/: coq1.v  coq2.v  coq3.v  coq_exam.v  exam.v
ing3/VOIR/: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
ing3/VOIR/src/: calibrate.cpp  image-getter.cpp  main.cpp  stereo.cpp
(+254 files in other folders)
