cmake_minimum_required( VERSION 2.8 )
project( exemplesOpencv )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
#-----------compilation step
add_executable( load.exe load.cpp )
add_executable( exo5 exo5.cpp )
add_executable( exo6 exo6.cpp )
add_executable( exo7 exo7.cpp )
add_executable( exo8 exo8.cpp )
add_executable( exo9 exo9.cpp )
add_executable( exo10 exo10.cpp )
add_executable( exo11 exo11.cpp )
add_executable( exo12 exo12.cpp )
add_executable( exo13 exo13.cpp )
add_executable( exo14 exo14.cpp )
add_executable( exo15 exo15.cpp )
add_executable( exo17 exo17.cpp )
add_executable( exo18 exo18.cpp )
add_executable( exo19 exo19.cpp )
add_executable( exo20 exo20.cpp )
add_executable( exo21 exo21.cpp )
add_executable( exo22 exo22.cpp )
add_executable( exo23 exo23.cpp )
add_executable( exo24 exo24.cpp )
#-----------linking step
target_link_libraries( load.exe ${OpenCV_LIBS} )
target_link_libraries( exo5 ${OpenCV_LIBS} )
target_link_libraries( exo6 ${OpenCV_LIBS} )
target_link_libraries( exo7 ${OpenCV_LIBS} )
target_link_libraries( exo8 ${OpenCV_LIBS} )
target_link_libraries( exo9 ${OpenCV_LIBS} )
target_link_libraries( exo10 ${OpenCV_LIBS} )
target_link_libraries( exo11 ${OpenCV_LIBS} )
target_link_libraries( exo12 ${OpenCV_LIBS} )
target_link_libraries( exo13 ${OpenCV_LIBS} )
target_link_libraries( exo14 ${OpenCV_LIBS} )
target_link_libraries( exo15 ${OpenCV_LIBS} )
target_link_libraries( exo17 ${OpenCV_LIBS} )
target_link_libraries( exo18 ${OpenCV_LIBS} )
target_link_libraries( exo19 ${OpenCV_LIBS} )
target_link_libraries( exo20 ${OpenCV_LIBS} )
target_link_libraries( exo21 ${OpenCV_LIBS} )
target_link_libraries( exo22 ${OpenCV_LIBS} )
target_link_libraries( exo23 ${OpenCV_LIBS} )
target_link_libraries( exo24 ${OpenCV_LIBS} )
